# sonido

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSING.md  Makefile  README.md  deny.toml  netlify.toml
crates/sonido-analysis/: Cargo.toml
crates/sonido-analysis/benches/: analysis_bench.rs
crates/sonido-analysis/examples/: analysis_demo.rs
crates/sonido-analysis/src/: cfc.rs  compare.rs  constant_q.rs  ddc.rs  distortion.rs  dynamics.rs  export.rs  fft.rs  filterbank.rs  hilbert.rs  ir.rs  lib.rs  lms.rs  phase.rs  resample.rs  spectrogram.rs  spectrum.rs  transfer_fn.rs  xcorr.rs
crates/sonido-analysis/tests/: integration.rs
crates/sonido-cli/: Cargo.toml
crates/sonido-cli/src/: effects.rs  graph_dsl.rs  main.rs  preset.rs
crates/sonido-cli/src/commands/: analyze.rs  common.rs  compare.rs  daisy.rs  devices.rs  effects.rs  generate.rs  info.rs  mod.rs  play.rs  presets.rs  process.rs  realtime.rs  tui.rs
crates/sonido-cli/tests/: integration.rs
crates/sonido-config/: Cargo.toml
crates/sonido-config/examples/: preset_demo.rs
crates/sonido-config/src/: chain.rs  effect_config.rs  error.rs  factory_presets.rs  lib.rs  paths.rs  preset.rs  validation.rs
crates/sonido-config/tests/: integration.rs
crates/sonido-core/: Cargo.toml
crates/sonido-core/benches/: core_bench.rs  graph_bench.rs
crates/sonido-core/examples/: tempo_sync_demo.rs
crates/sonido-core/src/: adaa.rs  allpass.rs  biquad.rs  comb.rs  compose.rs  dc_blocker.rs  delay.rs  effect.rs  effect_with_params.rs  envelope.rs  fast_math.rs  gain.rs  lfo.rs  lib.rs  math.rs  modulation.rs  noon.rs  one_pole.rs  oversample.rs  param.rs  param_info.rs  plugin_host.rs  svf.rs  tempo.rs
crates/sonido-core/src/graph/: buffer.rs  edge.rs  engine.rs  mod.rs  node.rs  processing.rs  schedule.rs  spectral_node.rs  stereo_samples.rs
crates/sonido-core/src/kernel/: adapter.rs  hot_reload.rs  mod.rs  morph.rs  traits.rs
crates/sonido-core/tests/: integration.rs  properties.rs
crates/sonido-daisy/: Cargo.toml  build.rs  memory.x
crates/sonido-daisy/.cargo/: config.toml
crates/sonido-daisy/examples/: adc_diag.rs  audio_input_diag.rs  bench_kernels.rs  bench_mini.rs  blinky.rs  blinky_bare.rs  gpio_diag.rs  heap_test.rs  hothouse_diag.rs  morph_pedal.rs  passthrough.rs  passthrough_blink.rs  silence.rs  single_effect.rs  sonido_pedal.rs  square_out.rs  temp_diag.rs  tone_out.rs
crates/sonido-daisy/src/: adc.rs  audio.rs  controls.rs  device_sync.rs  effect_slot.rs  hothouse.rs  led.rs  lib.rs  midi.rs  noon_presets.rs  param_map.rs  qspi.rs  rcc.rs  sdram.rs  tap_tempo.rs
crates/sonido-effects/: Cargo.toml
crates/sonido-effects/benches/: effects_bench.rs
crates/sonido-effects/examples/: chain_demo.rs
crates/sonido-effects/src/: bitcrusher.rs  chorus.rs  compressor.rs  delay.rs  distortion.rs  filter.rs  flanger.rs  gate.rs  lib.rs  limiter.rs  multi_vibrato.rs  parametric_eq.rs  phaser.rs  preamp.rs  reverb.rs  ring_mod.rs  stage.rs  tape_saturation.rs  tremolo.rs  wah.rs
crates/sonido-effects/src/kernels/: bitcrusher.rs  chorus.rs  compressor.rs  deesser.rs  delay.rs  distortion.rs  drone.rs  filter.rs  flanger.rs  gate.rs  glitch.rs  limiter.rs  mod.rs  multi_vibrato.rs  multiband_comp.rs  parametric_eq.rs  phaser.rs  plate_reverb.rs  preamp.rs  reverb.rs  ring_mod.rs  ringmod.rs  shelving_eq.rs  spring_reverb.rs  stage.rs  stereo_widener.rs  tape.rs  tape_saturation.rs  texture.rs  time_stretch.rs  transient_shaper.rs  tremolo.rs  tuner.rs  vibrato.rs  wah.rs
crates/sonido-effects/tests/: compliance.rs  extreme_params.rs  noon_mapping.rs  param_contracts.rs  properties.proptest-regressions  properties.rs  quality_standard.rs  regression.rs
crates/sonido-effects/tests/golden/: bitcrusher.golden  bitcrusher_defaults.golden  chorus.golden  chorus_defaults.golden  chorus_stereo_left.golden  chorus_stereo_right.golden  clean_preamp.golden  clean_preamp_defaults.golden  compressor.golden  compressor_defaults.golden  delay.golden  delay_defaults.golden  delay_stereo_left.golden  distortion.golden  (+42 more)
crates/sonido-graph-dsl/: Cargo.toml
crates/sonido-graph-dsl/src/: builder.rs  effects.rs  lib.rs  parser.rs  serialize.rs
crates/sonido-graph-dsl/tests/: integration.rs
crates/sonido-gui/: Cargo.toml  Trunk.toml  index.html
crates/sonido-gui-core/: Cargo.toml
crates/sonido-gui-core/src/: accessibility.rs  lib.rs  param_bridge.rs  theme.rs
crates/sonido-gui/src/: app.rs  atomic_param_bridge.rs  audio_bridge.rs  audio_processor.rs  chain_manager.rs  chain_view.rs  dsl_console.rs  file_player.rs  graph_view.rs  lib.rs  main.rs  morph_state.rs  preset_manager.rs  session.rs  signal_generator.rs  theme.rs
crates/sonido-io/: Cargo.toml
crates/sonido-io/src/: backend.rs  cpal_backend.rs  engine.rs  graph_engine.rs  lib.rs  stream.rs  wav.rs
crates/sonido-io/tests/: integration.rs
crates/sonido-platform/: Cargo.toml
crates/sonido-platform/src/: control_context.rs  control_mapper.rs  graph_mapper.rs  knob_mapping.rs  lib.rs  noon.rs  param_map.rs
crates/sonido-plugin/: Cargo.toml
crates/sonido-plugin/examples/: sonido-bitcrusher.rs  sonido-chain.rs  sonido-chorus.rs  sonido-compressor.rs  sonido-delay.rs  sonido-distortion.rs  sonido-eq.rs  sonido-filter.rs  sonido-flanger.rs  sonido-gate.rs  sonido-limiter.rs  sonido-multivibrato.rs  sonido-phaser.rs  sonido-preamp.rs  sonido-reverb.rs  sonido-ringmod.rs  sonido-stage.rs  sonido-tape.rs  sonido-tremolo.rs  sonido-wah.rs
crates/sonido-plugin/src/: audio.rs  gui.rs  lib.rs  main_thread.rs  shared.rs
crates/sonido-plugin/tests/: buffer_sizes.rs  state_roundtrip.rs
crates/sonido-registry/: Cargo.toml
crates/sonido-registry/src/: lib.rs
crates/sonido-registry/tests/: integration.rs
crates/sonido-synth/: Cargo.toml
crates/sonido-synth/benches/: synth_bench.rs
crates/sonido-synth/examples/: modulation_demo.rs  synthesis_demo.rs
crates/sonido-synth/src/: audio_mod.rs  envelope.rs  lib.rs  mod_matrix.rs  oscillator.rs  synth.rs  voice.rs
crates/sonido-synth/tests/: integration.rs
(+123 files in other folders)
