[workspace]
resolver = "3"
members = [
    "crates/sonido-core",
    "crates/sonido-effects",
    "crates/sonido-analysis",
    "crates/sonido-io",
    "crates/sonido-cli",
    "crates/sonido-gui",
    "crates/sonido-registry",
    "crates/sonido-platform",
    "crates/sonido-config",
    "crates/sonido-synth",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Suds"]
repository = "https://github.com/suds/sonido"

[workspace.dependencies]
# Core math for no_std
libm = "0.2"

# FFT for analysis (std only)
rustfft = "6.2"

# Numeric traits for generic code
num-traits = { version = "0.2", default-features = false }

# Benchmarking
criterion = "0.5"

# Internal crates
sonido-core = { path = "crates/sonido-core", default-features = false }
sonido-effects = { path = "crates/sonido-effects", default-features = false }
sonido-analysis = { path = "crates/sonido-analysis" }
sonido-io = { path = "crates/sonido-io" }
sonido-registry = { path = "crates/sonido-registry", default-features = false }
sonido-platform = { path = "crates/sonido-platform", default-features = false }
sonido-config = { path = "crates/sonido-config", default-features = false }
sonido-synth = { path = "crates/sonido-synth", default-features = false }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
hound = "3.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
indicatif = "0.17"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
