[workspace]
resolver = "3"
members = [
    "crates/sonido-core",
    "crates/sonido-effects",
    "crates/sonido-analysis",
    "crates/sonido-io",
    "crates/sonido-cli",
    "crates/sonido-gui",
    "crates/sonido-gui-core",
    "crates/sonido-registry",
    "crates/sonido-platform",
    "crates/sonido-config",
    "crates/sonido-synth",
    "crates/sonido-plugin",
]
default-members = [
    "crates/sonido-core",
    "crates/sonido-effects",
    "crates/sonido-analysis",
    "crates/sonido-io",
    "crates/sonido-cli",
    "crates/sonido-gui",
    "crates/sonido-gui-core",
    "crates/sonido-registry",
    "crates/sonido-platform",
    "crates/sonido-config",
    "crates/sonido-synth",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Suds"]
repository = "https://github.com/suds/sonido"

[workspace.dependencies]
# Core math for no_std
libm = "0.2"

# FFT for analysis (std only)
rustfft = "6.2"

# Benchmarking
criterion = "0.5"

# Internal crates
sonido-core = { path = "crates/sonido-core", default-features = false }
sonido-effects = { path = "crates/sonido-effects", default-features = false }
sonido-analysis = { path = "crates/sonido-analysis" }
sonido-io = { path = "crates/sonido-io" }
sonido-registry = { path = "crates/sonido-registry", default-features = false }
sonido-platform = { path = "crates/sonido-platform", default-features = false }
sonido-config = { path = "crates/sonido-config", default-features = false }
sonido-synth = { path = "crates/sonido-synth", default-features = false }
sonido-gui-core = { path = "crates/sonido-gui-core" }

# GUI framework
egui = "0.31"
eframe = "0.31"
egui_extras = "0.31"
egui_glow = "0.31"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
cpal = "0.17"
hound = "3.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
indicatif = "0.17"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"

# Testing
proptest = "1"
tempfile = "3.15"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
unreadable_literal = "allow"
uninlined_format_args = "allow"
float_cmp = "allow"
too_many_lines = "allow"
similar_names = "allow"
cast_possible_wrap = "allow"
unused_self = "allow"
unnecessary_wraps = "allow"
return_self_not_must_use = "allow"
semicolon_if_nothing_returned = "allow"
match_same_arms = "allow"
items_after_statements = "allow"
struct_field_names = "allow"
redundant_closure_for_method_calls = "allow"
needless_pass_by_value = "allow"
used_underscore_binding = "allow"
should_panic_without_expect = "allow"
explicit_iter_loop = "allow"
map_unwrap_or = "allow"
manual_midpoint = "allow"
format_push_string = "allow"
no_effect_underscore_binding = "allow"
range_plus_one = "allow"
needless_range_loop = "allow"
many_single_char_names = "allow"
implicit_hasher = "allow"
implicit_clone = "allow"
if_not_else = "allow"
cloned_instead_of_copied = "allow"
case_sensitive_file_extension_comparisons = "allow"
unnecessary_debug_formatting = "allow"

[profile.dev]
split-debuginfo = "unpacked"

# Strip full debuginfo from dependencies — keeps line tables for stack traces,
# cuts binary sizes 3-5x (280MB GUI → ~60-80MB). Workspace crates keep full debug.
[profile.dev.package."*"]
debug = "line-tables-only"
strip = "debuginfo"

# Optimize proc-macro and build-script compilation — they run at compile time,
# so opt-level=3 makes derive-heavy builds faster.
[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
