[package]
name = "sonido-cli"
description = "Command-line interface for Sonido DSP framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "sonido"
path = "src/main.rs"

[dependencies]
sonido-core = { workspace = true, features = ["std"] }
sonido-effects = { workspace = true, features = ["std"] }
sonido-analysis = { workspace = true }
sonido-io = { workspace = true }
sonido-config = { workspace = true }
sonido-synth = { workspace = true, features = ["std"] }

clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
indicatif = { workspace = true }
thiserror = { workspace = true }
ctrlc = "3.4"
anyhow = "1.0"
serde_json = "1.0"
num-traits = { workspace = true }
rustfft = { workspace = true }

[lints]
workspace = true
