[package]
name = "sonido-cli"
description = "Command-line interface for Sonido DSP framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "sonido"
path = "src/main.rs"

[dependencies]
sonido-core = { workspace = true, features = ["std", "tracing"] }
sonido-effects = { workspace = true, features = ["std"] }
sonido-analysis = { workspace = true }
sonido-io = { workspace = true }
sonido-config = { workspace = true, features = ["std"] }
sonido-synth = { workspace = true, features = ["std"] }

clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
indicatif = { workspace = true }
thiserror = { workspace = true }
ctrlc = "3.4"
anyhow = "1.0"
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json = { workspace = true }
rustfft = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sonido-registry = { workspace = true, features = ["std"] }

[lints]
workspace = true
