[package]
name = "sonido-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Configuration, preset, and chain management for sonido audio effects"
keywords = ["dsp", "audio", "effects", "config", "presets"]
categories = ["multimedia::audio", "config"]

[features]
default = ["std"]
std = ["sonido-registry/std"]

[dependencies]
sonido-core = { workspace = true }
sonido-registry = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
libm = { workspace = true }
dirs = "5.0"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.10"
