[package]
name = "sonido-daisy"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Sonido DSP firmware for Electrosmith Daisy Seed (STM32H750 Cortex-M7)"
publish = false

[dependencies]
sonido-core = { path = "../sonido-core", default-features = false }
sonido-effects = { path = "../sonido-effects", default-features = false }

# Embassy async runtime
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = "0.5"
embassy-stm32 = { version = "0.5", features = ["stm32h750ib"] }
embassy-usb = "0.5"

# Daisy Seed BSP
daisy-embassy = { version = "0.2", default-features = false }

# Cortex-M
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

# Logging
defmt = "1.0"
defmt-rtt = "1.1"

# Heap allocator (for alloc-based DSP kernels: delay lines, reverb buffers)
embedded-alloc = "0.6"

# Panic handler
panic-probe = { version = "1.0", features = ["print-defmt"] }

[features]
default = ["seed_1_2"]
seed_1_1 = ["daisy-embassy/seed_1_1"]
seed_1_2 = ["daisy-embassy/seed_1_2"]
