[package]
name = "sonido-gui-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared GUI widgets, theme, and parameter bridge for Sonido"

[dependencies]
# GUI framework
egui = "0.31"

# Core types (ParamDescriptor, ParamUnit)
sonido-core = { path = "../sonido-core", features = ["std"] }

[lints]
workspace = true
