[package]
name = "sonido-gui-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared GUI widgets, theme, and parameter bridge for Sonido"

[dependencies]
# GUI framework
egui = { workspace = true }

# Core types (ParamDescriptor, ParamUnit)
sonido-core = { workspace = true, features = ["std"] }

[lints]
workspace = true
