[package]
name = "sonido-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Professional GUI for the Sonido DSP framework"

[[bin]]
name = "sonido-gui"
path = "src/main.rs"

[dependencies]
# GUI framework
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"

# Audio (workspace)
cpal.workspace = true
sonido-core = { path = "../sonido-core", features = ["std"] }
sonido-effects = { path = "../sonido-effects", features = ["std"] }
sonido-io = { path = "../sonido-io" }
sonido-config = { path = "../sonido-config", features = ["std"] }
sonido-gui-core = { path = "../sonido-gui-core" }
sonido-registry = { path = "../sonido-registry", features = ["std"] }

# Thread-safety
crossbeam-channel = "0.5"
parking_lot = "0.12"

# File dialogs
rfd = "0.15"

# Presets
serde.workspace = true
serde_json = "1.0"
dirs = "5.0"

# CLI args
clap.workspace = true

# Error handling
thiserror.workspace = true

# Logging
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.17", features = ["wasm-bindgen"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Document"] }
web-time = "1.1"
hound = "3.5"

[lints]
workspace = true

[features]
default = []
