[package]
name = "sonido-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Professional GUI for the Sonido DSP framework"

[[bin]]
name = "sonido-gui"
path = "src/main.rs"

[dependencies]
# GUI framework
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }

# Audio (workspace)
cpal.workspace = true
sonido-core = { workspace = true, features = ["std", "tracing"] }
sonido-effects = { workspace = true, features = ["std"] }
sonido-config = { workspace = true, features = ["std"] }
sonido-gui-core = { workspace = true }
sonido-registry = { workspace = true, features = ["std"] }

# Thread-safety
arc-swap = "1.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# File dialogs
rfd = "0.15"

# Presets
serde.workspace = true
serde_json = { workspace = true }

# Error handling
thiserror.workspace = true

# Tracing
tracing.workspace = true
# log stays for files not yet migrated (file_player.rs) and wasm WebLogger
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sonido-io = { workspace = true }
clap.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.17", features = ["wasm-bindgen"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Document"] }
web-time = "1.1"
hound = { workspace = true }

[lints]
workspace = true

[features]
default = []
