[package]
name = "sonido-io"
description = "Audio I/O layer for Sonido DSP framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sonido-core = { workspace = true, features = ["std"] }
cpal.workspace = true
hound = "3.5"
thiserror = "2.0"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.15"
