[package]
name = "sonido-io"
description = "Audio I/O layer for Sonido DSP framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sonido-core = { workspace = true, features = ["std"] }
cpal.workspace = true
hound = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
