[package]
name = "sonido-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLAP/VST3 plugin adapter for sonido audio effects"
keywords = ["dsp", "audio", "clap", "vst3", "plugin"]
categories = ["multimedia::audio"]

[lib]
name = "sonido_plugin"

[dependencies]
sonido-core = { workspace = true, features = ["std"] }
sonido-effects = { workspace = true, features = ["std"] }
sonido-registry = { workspace = true, features = ["std"] }

clack-plugin = { git = "https://github.com/prokopyl/clack.git" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", features = [
    "clack-plugin",
    "audio-ports",
    "params",
    "state",
] }

serde = { workspace = true }
serde_json = "1.0"

[lints]
workspace = true

[[example]]
name = "sonido-distortion"
crate-type = ["cdylib"]
