[package]
name = "sonido-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLAP/VST3 plugin adapter for sonido audio effects"
keywords = ["dsp", "audio", "clap", "vst3", "plugin"]
categories = ["multimedia::audio"]

[lib]
name = "sonido_plugin"

[dependencies]
sonido-core = { workspace = true, features = ["std"] }
sonido-effects = { workspace = true, features = ["std"] }
sonido-registry = { workspace = true, features = ["std"] }

clack-plugin = { git = "https://github.com/prokopyl/clack.git" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", features = [
    "clack-plugin",
    "audio-ports",
    "params",
    "state",
    "gui",
    "raw-window-handle_05",
] }

sonido-gui-core = { path = "../sonido-gui-core" }
egui-baseview = { git = "https://codeberg.org/BillyDM/egui-baseview.git", rev = "ec70c3fe" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "9a0b42c09d712777b2edb4c5e0cb6baf21e988f0" }
raw-window-handle = "0.5"

serde = { workspace = true }
serde_json = "1.0"

[lints]
workspace = true

[[example]]
name = "sonido-preamp"
crate-type = ["cdylib"]

[[example]]
name = "sonido-distortion"
crate-type = ["cdylib"]

[[example]]
name = "sonido-compressor"
crate-type = ["cdylib"]

[[example]]
name = "sonido-gate"
crate-type = ["cdylib"]

[[example]]
name = "sonido-eq"
crate-type = ["cdylib"]

[[example]]
name = "sonido-wah"
crate-type = ["cdylib"]

[[example]]
name = "sonido-chorus"
crate-type = ["cdylib"]

[[example]]
name = "sonido-flanger"
crate-type = ["cdylib"]

[[example]]
name = "sonido-phaser"
crate-type = ["cdylib"]

[[example]]
name = "sonido-tremolo"
crate-type = ["cdylib"]

[[example]]
name = "sonido-delay"
crate-type = ["cdylib"]

[[example]]
name = "sonido-filter"
crate-type = ["cdylib"]

[[example]]
name = "sonido-multivibrato"
crate-type = ["cdylib"]

[[example]]
name = "sonido-tape"
crate-type = ["cdylib"]

[[example]]
name = "sonido-reverb"
crate-type = ["cdylib"]
